--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div id='main-content-wrapper'>
                         <div class='side-by-side'>
                             <section class='image-content'>
-                                <img src="http://www.republic-online.com/uploaded-photos/rep-run/image_5485d6b4-a904-5d4f-b0fd-ac12bac4be5b.html">
+                                <img src=568ac840810f6.image.jpg
                                 <h4>
                                 <a href='https:google.com'>
                                     katelynn scherman</a>
