--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div id='main-content-wrapper'>
                         <div class='side-by-side'>
                             <section class='image-content'>
-                                <img src='568ac840810f6.image.jpg'>
+                                <img src='images/568ac840810f6.image.jpg'>
                                 <h4>
                                 <a href='https:google.com'>
                                     katelynn scherman</a>
@@ -49,7 +49,7 @@
                         <!--end side by side-->
                         <section id='skills'>
                             <h5>
-                                SKILLS: <span>html | css | javascript | git</span>
+                                SKILLS: <span> html | css | javascript | git</span>
                             
                                </h5>
                         
