--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div id='aside-content-wrappper'>
                     <aside id='aside-right'>
                         <h3>latest work</h3>
-                        <ul id="Latest-Work">
+                        <ul id="latest-work">
                         <li>project 1</li>
                         <li>project 2</li>
                         <li>project 3</li>
